# cognite-synthetic-tags

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: code-quality-checks.yml  publish.yml
cognite_synthetic_tags/: __init__.py  _operations.py  data_stores.py  tag.py  tag_resolver.py  types.py
tests/: _utils.py  conftest.py  test_data_stores.py  test_resolver.py  test_tag.py  utils.py
tests/integration/: _client.py  conftest.py  test_client.py  test_multi_store.py  test_single_store.py
tests/integration/test_multi_store/: test_multi_store_multiple_tags.yml  test_multi_store_multiple_tags_and_literals.yml  test_multi_store_multiple_tags_and_literals_subraction.yml  test_multi_store_multiple_tags_same_tag_in_multiple_stores.yml  test_multi_store_single_tag.yml
tests/integration/test_single_store/: test_single_store_comparison.yml  test_single_store_comparison_w_literals.yml  test_single_store_multiple_tags.yml  test_single_store_no_tags.yml  test_single_store_only_comparison.yml  test_single_store_only_comparison_w_literals.yml  test_single_store_only_subtraction.yml  test_single_store_single_tag.yml  test_single_store_subtraction.yml
