[tool.poetry]
name = "cognite_synthetic_tags"
version = "0.3.3"
description = "Framework for working easily with tags, synthetic and regular, from Cognite Data Fusion (CDF) API."
authors = ["Fran Hrzenjak <fran.hrzenjak@cognite.com>"]
license = "Apache License 2.0"

[tool.black]
line-length = 80

[tool.isort]
line_length=80
multi_line_output=3
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
ensure_newline_before_comments=true

[tool.coverage.run]
branch=true
source=["cognite_synthetic_tags"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.3"
cognite-sdk-core = "^2.42.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = {extras = ["toml"], version = "^5.5"}

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>30,<50.0",  # https://github.com/pypa/setuptools/issues/2353
    "wheel",
]
build-backend = "poetry.core.masonry.api"
